--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ body{
 .container-index h2{
     text-align: center;
     font-size: clamp(24px, 3vw, 32px);
-    border-bottom: 20px solid #cc1;
+    border-bottom: 35px solid #cc1;
     /* font-family: 'Cristiano Isaias da Silva', 'Darlington Signature', sans-serif; */
     font-family:'Times New Roman', Times, serif;
     color: #151C36;
@@ -37,10 +37,10 @@ body{
 }
 .container-titulo h1{
     color: #cc1;
-    font-size: clamp(35px, 5vw, 50px);
+    font-size: clamp(30px, 5vw, 50px);
     /* -webkit-text-stroke: 1px #000;  */
     font-family: 'Times New Roman', Times, serif;
-    
+    text-align: center;
 }
 .container-img{
     align-items: center;
@@ -90,13 +90,13 @@ body{
     display: flex;
     flex-direction: row;
     justify-content: center;
-    gap: 100px;
+    /* gap: 100px; */
     width: 100%;
     max-width: 1500px;
     height: 50px;
     background: #cc1;
     align-items: center;
-    border: 3px solid #cc1;
+    /* border: 3px solid #146; */
 }
 nav a{
     text-decoration: none;
@@ -136,19 +136,21 @@ margin-top: 50px;
 .container-curso{
     width: 100%;
     margin-left:-8px;
-    max-width: 1550px;
+    /* max-width: 1550px; */
     height: 60px;
     
-}
-.container-curso h3{
     
+}
+.container-curso h3{    
     text-align: center;    
     font-size: clamp(20px, 3vw, 32px);     
     background: #cc1;
-    padding-top: 5px;    
+    padding: 5px;    
     color: #fff;   
     font-weight: 750;
     font-family: 'Times New Roman', Times, serif;
+    /* max-width: 1550px; */
+    width: 100%;
 }
 .container-midle1-texto{
     text-align: center;
@@ -166,46 +168,33 @@ margin-top: 50px;
     font-family: 'Times New Roman', Times, serif;
     color: #151C36;
 }
-.container-curso h3{
-    /* margin:5px; */
-    font-family:'Times New Roman', Times, serif;
-    /* width: 1500px; */
-}
+
 .container-curso-master{
     display: flex;
     justify-content: center;
     /* flex-direction: row; */
     /* align-items: center;
     justify-content: center; */
-    width: 1500px;
+    max-width: 1500px;
+    width: 100%;
 }   
 
 .container-curso1{
     width: 100%;
-    max-width: 725px;
+    max-width: 1550px;
     height: 100px;
-    align-items: center;
-    flex-direction: row;
+    justify-content: center;    
     display: flex; 
     margin: 60px 0px 0px 0px;
+    flex-wrap: nowrap;
     
 }
-.container-curso2{
-    width: 100%;
-    max-width: 725px;
-    height: 100px;
-    align-items: center;
-    flex-direction: row;
-    display: flex; 
-    margin: 60px 0px 0px 0px;
-}
+
 .curso1, .curso2, .curso3, .curso4{
     display: flex;
     align-items: center;
-    justify-content: center;
     width: 100%;
-    max-width: 500px;
-    /* height: 400px; */
+    max-width: 400px;
     flex-direction: column; 
     font-family: 'Times New Roman', Times, serif;
     font-weight: bolder;
@@ -359,7 +348,9 @@ margin-top: 50px;
 }
 .container-webs{
     display: flex;
-    flex-direction: row;
+    /* flex-direction: column; */
+    justify-content: center;
+    align-items: center;
     margin: 5px;
     gap: 5px;
     
@@ -456,9 +447,9 @@ margin-top: 50px;
 }
 
 /* Para telas com 900px de largura ou menos --------------------------------------------------------------*/
-@media (max-width: 900px) {
+@media screen and (max-width: 768px) {
   .menu {
-    width: 100%;
+    width: 30%;
     display: block; /* Pode ser necessário para alguns layouts */
   }
   .container-hamburguer{
@@ -493,42 +484,52 @@ margin-top: 50px;
     width: 100%;
     max-width: 1500px;
 }
-.container-curso1, .curso2{
-    /* flex-direction: row; */
-    height: 150px;  
-    display: flex;  
-    align-items: center;            
+
+.container-curso1{
+    display: flex; 
+    flex-wrap: wrap;
+    max-width: 409px; 
+    justify-content: center;
+    align-items: center; 
+    height: 20px;
+    gap: 20px;
 }
-/* .container-curso1 .curso3, .curso4{
-    flex-direction: column;
-    height:150px;                
-} */
+.curso1,.curso2,.curso3,.curso4{
+    width: 180px;
+    text-align: center;
+    margin-top: 15px;
+}
+.curso1 span,.curso2 span,.curso3 span,.curso4 span{
+    width: 200px;
+    text-align: center;
+}
+
 .container-midle1 h2{
     text-align: center;
     margin: -20px 10px 10px 10px;
     font-size: clamp(20px, 3vw, 28px);
     line-height: 28px;
-    
+
 }
-.container-midle1 h3{
+/* .container-midle1 h3{
     margin: 30px 0px 0px 0px;     
-}
-.container-curso-master{
+} */
+/* .container-curso-master{
     display: flex;
     flex-direction: column;
-}
-.curso1, .curso2, .curso3, .curso4{
+} */
+/* .curso1, .curso2, .curso3, .curso4{
     width: 100%;
     max-width: 300px;
     height: auto;
     margin: -10px 0px  0px 0px;
 
-}
-.curso1 img, .curso2 img{
+} */
+/* .curso1 img, .curso2 img{
     max-width: 50px;
     margin-bottom: 5px;     
-}
-.curso1 span, .curso2 span, .curso3 span, .curso4 span{
+} */
+/* .curso1 span, .curso2 span, .curso3 span, .curso4 span{
     text-align: center;
     width: 240px;
     max-width: 240px;
@@ -536,16 +537,17 @@ margin-top: 50px;
 .curso3 img{
     max-width: 70px;
     height: 45px;
-}
-.curso3 img{
+} */
+/* .curso3 img{
     max-width: 70px;
     height: 45px;
-}
-.container-curso h3{
+} */
+/* .container-curso h3{
     padding: 5px;
     margin: 0px 0px 0px 0px;
     text-align: center;
-}
+    height: 40px;
+} */
 .container-curso1{
     
     margin: -10px 0px 0px 0px;
@@ -570,7 +572,7 @@ margin-top: 50px;
     flex-direction: row;
     justify-content: center;
     align-items: flex-start;
-    height: 250px;
+    height: 800px;
     /* gap: 0px; */
     /* border: 1px solid #898989; */
 }
@@ -702,9 +704,13 @@ margin-top: 50px;
     gap: 0px;
     color: #fff;
   }
+  .container-midle h2{
+    margin-top:-70px;
+  }
   .container-midle p{
     text-align: center;
   }
+
   .container-caixa-menu:hover .container-menu {
     display:block;
     
@@ -718,10 +724,11 @@ margin-top: 50px;
   }
   .container-curso1{
     width: 406px;
+    margin-top: 10px;
   }
   
   .container-curso2{
-    width: 406px;
+    width: 206px;
   }
   .curso2 img{
     width: 100%;
@@ -732,5 +739,16 @@ margin-top: 50px;
     width: 100%;
     max-width: 55px;
    margin-top:-10px;
+}
+.container-end1 h3{
+    margin-bottom:100px;
+}
+.container-end1{
+    margin-top: 78px;
+}
+.container-rede-social{
+    display: flex;
+    align-items: end;
+    height: 0px;
 }
 }
