--- a/css/style.css
+++ b/css/style.css
@@ -410,9 +410,11 @@ margin-top: 50px;
 }
 .container-link2 h1{
     display: flex;
+    font-size: clamp(13px, 5vw, 18px);
 }
 .container-link3 h1{
     display: flex;
+    font-size: clamp(13px, 5vw, 18px);
 }
 .container-link3{
     margin: -40px 10px 20px 80px;
@@ -594,7 +596,7 @@ margin-top: 50px;
     text-align: center;
 }
 .container-link2 h1{   
-    font-size: clamp(16px, 5vw, 18px); 
+    font-size: cgit lamp(16px, 5vw, 18px); 
     margin: 40px 10px 0px 5px;   
     max-width: 222px;
     width: 100%;
