--- a/css/style.css
+++ b/css/style.css
@@ -3,12 +3,15 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     background-color: #f0f0f0;
     color: #000;
-    border: 2px solid #151C36;
-    
+   outline: 2px solid #cc1;
+outline-offset: 2px;
+border: 2px solid #151C36;
 }
 .container-box{
    width: 100%;
    max-width: auto;
+   
+   
 }
 .container-index{
     width: 100%;
@@ -240,7 +243,7 @@ justify-content: center;
 .container-end{
     width: 100%;
     /* max-width: auto; */
-    height: 680px;
+    min-height: 750px;
    /* text-align: center; */
     margin-top: 50px;
     /* display: flex;
@@ -533,7 +536,7 @@ justify-content: center;
 .container-link3 h1{   
     font-size: clamp(16px, 5vw, 18px); 
     margin: -20px 0px 0px 0px;   
-    max-width: 285px;
+    max-width: 222px;
     width: 100%;
     color: #fff;
     background:#cc1;
@@ -660,6 +663,6 @@ justify-content: center;
 .container-rede-social{
     display: flex;
     align-items: end;
-    height: 0px;
+    height: 80px;
 }
 }
