--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,10 @@ border: 2px solid #151C36;
 .container-img h2{
     border: 1px solid #898989;
 }
+#mov1 { 
+    transform-origin: center center; 
+    transition: transform 0.3s ease; 
+}
 .container-img img{
     width: 100%;
     max-width: 200px;
@@ -73,6 +77,7 @@ border: 2px solid #151C36;
     outline:3px solid #cc1;
     outline-offset: red;
 }
+
 .container-menu{
     display: flex;
     justify-content: center;
